--- a/L01_HTMLBase/index.html
+++ b/L01_HTMLBase/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--
+     头文件:
+        1.<!DOCTYPE html>
+        2.必须在文件的首行
+        3.H5的头文件
+     标签:
+        1.标签是成对出现的
+        2.标签需要闭合   eg: <head></head>
+     内容:
+        1.头文件
+        2.html  head  title  body
+-->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8">     <!--指定编码格式-->
+    <title>HelloWorld</title>
 </head>
 <body>
-
+Hello,你好,欢迎进入你的第一个网页!
 </body>
+
 </html>
