--- a/L02_HTMLTwo/index.html
+++ b/L02_HTMLTwo/index.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
+
+<!-- HTML基础元素2-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
+<!--
+  1.有序列表
+    ①ol、li
+    ②嵌套规则
 
+  2.无序列表
+  ①ul、li
+  ②嵌套规则
+  常用：导航栏
+
+  3.type属性
+  ①有序：1、A、a、I、i
+  ②无序：disc、square、circle
+
+  4.列表的嵌套
+
+  5.自定义列表
+     dl  dt  dd
+-->
+
+<ol type="A">
+    <li>hello</li>
+    <li>world</li>
+    <li>type</li>
+</ol>
+
+<ul type="square">
+    <li>导航1</li>
+    <li>导航2</li>
+    <li>导航3</li>
+</ul>
+
+<ul>
+    <li><a href="http://baidu.com">百度</a></li>
+    <li><a href="http://taobao.com">淘宝</a></li>
+    <li><a href="http://jd.com">京东</a></li>
+</ul>
+
+<ul>
+    <li>湘菜
+        <ul>
+            <li>普通</li>
+            <li>微辣</li>
+            <li>超辣</li>
+        </ul>
+    </li>
+    <li>粤菜
+        <ul>
+            <li>普通</li>
+            <li>微辣</li>
+            <li>超辣</li>
+        </ul>
+    </li>
+    <li>东北菜
+        <ul>
+            <li>普通</li>
+            <li>微辣</li>
+            <li>超辣</li>
+        </ul>
+    </li>
+</ul>
+
+<dl>
+    <dt>导航
+    <dd>我是一个导航</dd>
+    </dt>
+    <dt>导航
+    <dd>我是一个导航</dd>
+    </dt>
+    <dt>导航
+    <dd>我是一个导航</dd>
+    </dt>
+</dl>
 </body>
 </html>
