内联元素与块元素

--- a/L07_HTMLElement/index.html
+++ b/L07_HTMLElement/index.html
@@ -35,11 +35,11 @@
 </head>
 
 <body>
-<!--内联元素 eg:a、img-->
+<!--内联元素 eg:a、img  (其他标签建议看文档)-->
 <a href="#" class="currentA">内联元素A</a>
 <img src="img.png" alt="">
 
-<!--块元素 eg:h1、p-->
+<!--块元素 eg:h1、p  (其他标签建议看文档)-->
 <h1 class="currentH1">我是和h1标签，我要单独占一行</h1>
 <p class="currentP">我是p标签，我也要单独占一行</p>
 
