--- a/L02_HTMLThree/use.html
+++ b/L02_HTMLThree/use.html
@@ -12,7 +12,7 @@ div+css
 table
 百度搜索引擎：不太喜欢table，更喜欢div+css
 
-align="center":内容居中
+align="center":内容居中显示
 -->
 <table border="1" align="center">
     <tr>
