--- a/ResumeInformation/Information.html
+++ b/ResumeInformation/Information.html
@@ -31,7 +31,7 @@
 
         <tr>
             <td>出生年月</td>
-            <td>1994.12.30</td>
+            <td>1994.08.08</td>
             <td>政治面貌</td>
             <td>党员</td>
         </tr>
@@ -52,7 +52,7 @@
 
         <tr>
             <td>所获证书</td>
-            <td colspan="5">计算机4级证书 英语四六级证书 工程师证书</td>
+            <td colspan="5">计算机四级证书 英语四六级证书 工程师证书</td>
         </tr>
 
         <tr>
